# takzero

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
analysis/: Cargo.toml
analysis/src/: main.rs
eee/: Cargo.toml
eee/src/: ensemble.rs  generalization.rs  generalization_behaviour.rs  lcghash.rs  main.rs  rnd.rs  seen_ratio.rs  simhash.rs  utils.rs
ensemble_experiment/: Cargo.toml
ensemble_experiment/src/: main.rs
evaluation/: Cargo.toml
evaluation/src/: evaluation.rs  main.rs
graph/: Cargo.toml
graph/src/: main.rs
learn/: Cargo.toml
learn/src/: early.tps  late.tps  main.rs  rnd_normalization.rs
match_results/: 5s.csv  6x6_first.csv  directed-random-big.csv  directed-random-new.csv  directed-random-small.csv  filtered_hashes.csv  final_tournament.csv  iclr_draft.csv  neurips_undirected.csv  neurips_undirected_tournament.csv  sampling_filtered.csv  seq-hal-tournament.csv  tournament-big.csv
match_results/6x6/: 6x6_second.csv
match_results/ignore/: big_vs_medium.csv  directed-random-big.csv  lcghash_window_beta.csv  match_results_idk_I_forgot.csv  negative-beta.csv  neurips_undirected.csv  sampling_filtered_2.csv  sampling_vs_no_sampling.csv  seq-hal-bugged-tournament.csv  simhash_window_beta.csv  tournament-big-small-no-random.csv  tournament-new.csv  tournament-small.csv  tournament_5.csv  tournament_recent.csv  tournament_unbalanced.csv  undirected-no-random-big.csv  undirected-no-random-small.csv  undirected-random-big.csv  undirected-random-small.csv
puzzle/: Cargo.toml
puzzle/src/: main.rs
python/: action_space.py  analyze_search.py  collect_match_results.py  concat_out.py  elo.py  extract_from_logs.py  generate_openings.py  get_match_results.py  improved_policy.py  novelty_per_depth.py  plot_eee.py  plot_elo_data.py  plot_win_ratio.py  replay_buffer_uniqueness.py
reanalyze/: Cargo.toml
reanalyze/src/: main.rs
rnd_experiment/: Cargo.toml
rnd_experiment/src/: data.rs  main.rs
runs/: beta_uniform.txt  constrained_top_16_epuct.txt  constrained_top_32_epuct.txt  constrained_top_5_with_beta.txt  constrained_top_8_with_beta_no_uniform.txt  epuct.txt  euct.txt  euct_epuct.txt  puct.txt  seqhal_16_no_beta_linear_50_puct.txt  seqhal_32_half_sqrt_epuct.txt  seqhal_32_linear_epuct.txt  seqhal_32_no_beta_half_sqrt_puct.txt  seqhal_32_no_beta_linear_puct.txt  seqhal_32_quarter_sqrt_epuct.txt  seqhal_64_epuct.txt  seqhal_64_linear_epuct.txt  seqhal_64_linear_euct.txt  seqhal_64_no_beta_linear_5000x10_puct.txt  seqhal_64_no_beta_linear_500_puct.txt  seqhal_64_no_beta_linear_50_puct.txt  seqhal_64_no_beta_linear_puct.txt  seqhal_64_no_beta_log_puct.txt  seqhal_64_no_beta_puct.txt
search/: Cargo.toml
search/src/: agent.rs  env.rs  eval.rs  lib.rs  mcts.rs
selfplay/: Cargo.toml
selfplay/src/: main.rs
takzero/: Cargo.toml
takzero/src/: lib.rs  model.rs  repr.rs  target.rs
takzero/src/network/: mod.rs  net3.rs  net4.rs  net4_big.rs  net4_ensemble.rs  net4_hash.rs  net4_lcg_hash.rs  net4_lcghash.rs  net4_neurips.rs  net4_simhash.rs  net5.rs  net6_simhash.rs  repr.rs  residual.rs
takzero/src/search/: agent.rs  env.rs  eval.rs  gumbel.rs  mcts.rs  mod.rs  policy.rs
takzero/src/search/node/: batched.rs  debug.rs  gumbel.rs  mcts.rs  mod.rs  noise.rs  policy.rs
tei/: Cargo.toml
tei/src/: main.rs  protocol.rs
train/: Cargo.toml
train/src/: evaluation.rs  main.rs  main_.rs  reanalyze.rs  self_play.rs  target.rs  training.rs
visualize_replay_buffer/: Cargo.toml
visualize_replay_buffer/src/: main.rs
visualize_search/: Cargo.toml
visualize_search/src/: main.rs  preview.js
