[workspace]
members = ["takzero", "train", "puzzle", "evaluation", "graph", "analysis"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
# core
fast-tak = "0.4.0"
takzero = { path = "takzero" }
tch = "0.13.0"
# rand
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
# CLI
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.0"
# parallelism
crossbeam = "0.8.2"
rayon = "1.7.0"
# misc
arrayvec = "0.7.4"
thiserror = "1.0.47"
