[workspace]
members = [
    "takzero",
    "puzzle",
    "evaluation",
    "graph",
    "analysis",
    "selfplay",
    "learn",
    "reanalyze",
    "tei",
    "eee",
    "visualize_search",
    "visualize_replay_buffer",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
# core
fast-tak = "0.4.1"
takzero = { path = "takzero" }
tch = "0.22.0"
# rand
rand = "0.10.0-rc.5"
rand_distr = "0.6.0-rc.0"
rand_chacha = "0.9.0"
# CLI
clap = { version = "4.4.0", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.5"
# parallelism
crossbeam = "0.8.2"
rayon = "1.7.0"
# misc
arrayvec = "0.7.4"
thiserror = "2.0.17"
ordered-float = "4.6.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# https://github.com/rust-lang/rust-clippy/issues/8538
iter_with_drain = "allow"
# this one is just annoying
module_name_repetitions = "allow"
struct_field_names = "allow"
# comment these out once in a while to check
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
# assertions on constants are useful
assertions_on_constants = "allow"
