[package]
name = "eee"      # Epistemic Estimator Experiment
version = "0.1.0"
edition = "2021"

[dependencies]
charming = "0.2.4"
tch.workspace = true
takzero.workspace = true
fast-tak.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
ordered-float.workspace = true

[lints]
workspace = true

[[bin]]
name = "rnd"
path = "src/rnd.rs"

[[bin]]
name = "seen_ratio"
path = "src/seen_ratio.rs"

[[bin]]
name = "generalization"
path = "src/generalization.rs"

[[bin]]
name = "ensemble"
path = "src/ensemble.rs"
