[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
env_logger.workspace = true
fast-tak.workspace = true
log.workspace = true
rand_chacha.workspace = true
rand.workspace = true
rayon.workspace = true
takzero.workspace = true
tch.workspace = true

[features]
baseline = []
