[package]
name = "puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
env_logger.workspace = true
fast-tak.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
takzero.workspace = true
tch.workspace = true
sqlite = "0.31.0"
charming = "0.2.4"
