[package]
name = "reanalyze"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec.workspace = true
clap.workspace = true
crossbeam.workspace = true
env_logger.workspace = true
fast-tak.workspace = true
log.workspace = true
rand_chacha.workspace = true
rand.workspace = true
takzero.workspace = true
tch.workspace = true

[lints]
workspace = true
