[package]
name = "takzero"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec.workspace = true
fast-tak.workspace = true
log.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
tch.workspace = true
thiserror.workspace = true
ordered-float = "3.7.0"
