[package]
name = "train"
version = "0.1.0"
edition = "2021"

[dependencies]
fast-tak = "0.3.2"
takzero = { path = "../takzero" }
mimalloc = { version = "0.1.37", default-features = false }
tch = "0.13.0"
rand = "0.8.5"
rayon = "1.7.0"
crossbeam = "0.8.2"
clap = { version = "4.3.19", features = ["derive"] }
