[package]
name = "train"
version = "0.1.0"
edition = "2021"

[dependencies]
takzero = { path = "../takzero" }
rayon = "1.7.0"
crossbeam = "0.8.2"
clap = { version = "4.3.19", features = ["derive"] }
arrayvec = "0.7.4"
thiserror = "1.0.47"
rand = "0.8.5"
rand_chacha = "0.3.1"
tch = "0.13.0"

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.37", default-features = false }
